frontend/src/App.css
:root{
  --gradient: rgb(96, 165, 250);
}

.navbar-search-input {
  @apply rounded-l-full py-1 px-2 md:px-3 text-blue-400 focus:outline-none w-full;
}

.navbar-search-btn {
  @apply text-white rounded-full p-1 hover:bg-gray-200 focus:outline-none w-6 h-6 flex items-center justify-center;
}

.sign-in-container {
  @apply w-90% md:w-96 py-3 mx-auto bg-white rounded-xl shadow-md overflow-hidden;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.message-box{
  @apply bottom-12 md:ml-5 fixed w-90% md:w-1/4 rounded-lg bg-blue-700 md:left-0;
}

.discussion-display-container {
  @apply w-90% py-3 mx-auto mb-10 bg-white rounded-xl shadow-md overflow-hidden;
  position: block;
}

.sign-in-input {
  @apply w-full h-5 px-3 py-5 mt-2 focus:outline-none rounded-lg;
}

/* this btn will be reused in the website multiple times */
.primary-btn {
  @apply mt-4 bg-blue-400 text-white py-2 px-6 rounded-lg;
}

.search_bar {
  @apply bg-white flex items-center rounded-full my-auto mr-4 md:mr-0 ml-4 md:ml-0 w-2/3 h-2/3 md:h-auto md:w-auto border-gray-400 border-solid border-0.5;
}

.underline-btn:hover{
  color:var(--gradient);
}

.underline-btn{
  transition: all ease-in-out 250ms;
}

.underline-btn:hover::after{
  width: 100%;
}

.underline-btn {
  @apply bg-white rounded-lg px-4;
  margin-top: 19px;
}

.underline-btn::after{
  @apply mx-auto;
  margin-top: 12px;
  content: '';
  display:flex;
  height: 5px;
  background-color: var(--gradient);
  width: 0%;

  transition: all ease-in-out 250ms;
}

#preloader{
  background: #fff url(https://cdn.dribbble.com/users/1186261/screenshots/3718681/_______.gif) no-repeat center;
  height: 100vh;
  width: 100%;
  position: fixed;
  z-index: 100;
}

